<resources>
    <string name="app_name">Maravillos</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="btn_bio">Bio</string>
    <string name="btn_video">Video</string>

    <string name="action_search">search</string>
    <string name="action_settings">Search</string>

    <string name="detail_city">City:</string>
    <string name="detail_country">Country:</string>
    <string name="detail_church">Main church: </string>
    <string name="title_activity_bio">Biography</string>
</resources>
