<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/detailview_background"
    android:orientation="vertical"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    tools:context="be.intec.maravillos.DetailActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtv_detail_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/actionbar_background"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtv_detail_lastname"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:textColor="@color/actionbar_background"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtv_detail_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/detail_city" />

            <TextView
                android:id="@+id/txtv_detail_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/detail_country" />

            <TextView
                android:id="@+id/txtv_detail_churchname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/detail_church" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtv_detail_quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/quote"
            android:textColor="@color/actionbar_background"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:typeface="sans" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_bio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/btn_bio" />

        <Button
            android:id="@+id/btn_video"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/btn_video" />
    </LinearLayout>
</LinearLayout>
